<resources>
    <string name="app_name">TODO LIST</string>
    <string name="add_post">+ Разместить объявление</string>
    <string name="search">Search</string>
    <string name="previous_tasks">Previous Tasks</string>
    <string name="current_tasks">Current Tasks</string>
    <string name="categories">Categories</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="create_new_task">Create New Task</string>
    <string name="tasks">Tasks</string>
    <string name="calendar">Calendar</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="options">options</string>
    <string name="mark_as_done">Mark As Done</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="confirm">Confirm</string>
    <string name="time">Time</string>
    <string name="to_do_until">To Do Until</string>
    <string name="save">Save</string>
    <string name="done">Done</string>
    <string name="keep_your_plan">Keep Your Plan</string>
    <string name="username">Username</string>
</resources>