<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/dialog_sheet">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Title"
        android:fontFamily="@font/roboto_medium"
        android:textSize="30sp"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Description"
            android:fontFamily="@font/roboto_regular"
            android:lines="6"
            android:textAlignment="textStart"
            android:gravity="start"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/to_do_until"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_medium"
                android:layout_marginTop="20dp"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/date/ddmmyy"
                android:fontFamily="@font/roboto_medium"
                android:textSize="25sp"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@tools:sample/date/hhmm"
                android:fontFamily="@font/roboto_regular"
                android:textSize="20sp"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:paddingTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/done"
                android:gravity="end"
                android:textSize="30sp"
                android:textColor="@color/white"
                app:drawableEndCompat="@drawable/done"
                android:visibility="gone"
                />
            <android.widget.Button
                android:id="@+id/mark_as_done_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/mark_as_done"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/dark_button"/>
            <android.widget.Button
                android:id="@+id/save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:background="@drawable/light_button"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>