<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bg_purple"
    tools:context=".TasksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topcard"
        android:layout_width="match_parent"
        android:layout_height="118dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/top_card"
        android:paddingHorizontal="16dp"
        android:paddingTop="51dp"
        android:paddingBottom="27dp"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/search_bar"
            android:paddingHorizontal="5dp"
            android:hint="@string/search"
            android:textColorHint="@color/grey"
            android:textSize="14sp"
            android:drawablePadding="10dp"
            android:textColor="@color/white"
            android:drawableStart="@drawable/arrow_back"
            android:visibility="gone"
            android:drawableEnd="@drawable/manage_search"/>
        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:src="@drawable/pp"
            android:visibility="visible"
            android:contentDescription="profile picture"/>

        <TextView
            android:id="@+id/topcard_greeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/profile_pic"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="10dp"
            tools:text="Hello Joshitha"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:visibility="visible"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/topcard_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/profile_pic"
            app:layout_constraintTop_toBottomOf="@id/topcard_greeting"
            android:layout_marginStart="10dp"
            tools:text="Keep Plan For 1 Day"
            android:fontFamily="@font/roboto_medium"
            android:textSize="16sp"
            android:visibility="visible"
            android:textColor="@color/white"/>

        <ImageView
            android:id="@+id/manage_search"
            android:layout_width="26dp"
            android:layout_height="26dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="visible"
            android:src="@drawable/manage_search"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topcard"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/card"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="@string/previous_tasks"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="11dp"
                android:src="@drawable/expand_down_circle"
                android:background="@color/transparent"/>
        </FrameLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <FrameLayout
            android:id="@+id/current_tasks"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/card"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="@string/current_tasks"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <ImageView
                android:id="@+id/current_tasks_arrow"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="11dp"
                android:src="@drawable/expand_down_circle"
                android:background="@color/transparent"/>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/current_tasks_list"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/card"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="@string/categories"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="40dp"
                android:src="@drawable/add_box"
                android:background="@color/transparent"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="11dp"
                android:src="@drawable/expand_down_circle"
                android:background="@color/transparent"/>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/card"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="12dp"
                android:gravity="center_vertical"
                android:text="@string/completed_tasks"
                android:fontFamily="@font/roboto_regular"
                android:textColor="@color/white"
                android:textSize="14sp"/>

            <ImageButton
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="end|center_vertical"
                android:layout_marginEnd="11dp"
                android:src="@drawable/expand_down_circle"
                android:background="@color/transparent"/>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </LinearLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/create_new_task"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_medium"
        android:drawableStart="@drawable/add_box"
        android:paddingHorizontal="115dp"
        android:textAllCaps="false"
        android:background="@drawable/create_task"/>

</androidx.constraintlayout.widget.ConstraintLayout>